Fix vertical align in users table

--- a/assets/styles/admin.scss
+++ b/assets/styles/admin.scss
@@ -57,6 +57,7 @@ section {
 }
 
 .role-pad {
+  height: fit-content;
   padding: 3px 8px;
   border-radius: 20px;
   background-color: #009C41;
